run-in-eksctl/cluster/hello-nemesis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-nemesis
  namespace: hello-world
spec:
  type: NodePort
  ports:
    - port: 5000
  selector:
    app: hello-nemesis
