run-in-eksctl/cluster/hello-world-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress
  namespace: hello-world
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: hello-world-ingress
spec:
 rules:
 - http:
     paths:
     - path: /world
       backend:
         serviceName: hello-world
         servicePort: 5000
     - path: /nemesis
       backend:
         serviceName: hello-nemesis
         servicePort: 5000
